--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
-spring.datasource.url=jdbc:mysql://mailitdv.beget.tech/mailitdv_itsport?useSSL=false
-spring.datasource.username=mailitdv_itsport
-spring.datasource.password=DcLj7pD
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 server.port=${PORT:8080}
